fixed jackson module error