@@ -19,6 +19,16 @@
 		<cxf.version>4.1.4</cxf.version>
 		<main-module>com.example.demo</main-module>
 		<start-class>com.example.demo.DemoApplication</start-class>
+		<!-- same as in .mvm/jvm.config. Configs defined here are used for local testing -->
+		<hibernate.validator.add-opens>
+			--add-opens
+			org.hibernate.validator/org.hibernate.validator.internal.engine=spring.core,spring.beans
+			--add-opens
+			org.hibernate.validator/org.hibernate.validator.internal.constraintvalidators.bv=spring.beans,spring.core
+			--add-opens
+			org.hibernate.validator/org.hibernate.validator.internal.metadata=spring.beans,spring.core
+
+		</hibernate.validator.add-opens>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,8 +40,16 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>prometheus-metrics-exposition-formats</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +76,22 @@
 			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
+		<!-- Source: https://mvnrepository.com/artifact/org.apache.neethi/neethi -->
+		<dependency>
+			<groupId>org.apache.neethi</groupId>
+			<artifactId>neethi</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.xmlschema</groupId>
+			<artifactId>xmlschema-core</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -68,6 +102,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -130,6 +165,7 @@
 					<argLine>
 						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
 						-Xshare:off
+						${hibernate.validator.add-opens}
 					</argLine>
 				</configuration>
 			</plugin>
